--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- jumbotron -->
     <section class="jumbotron text-center">
         <img src="https://raw.githubusercontent.com/RAMALANHEKING99/RAMALANHEKING99/refs/heads/main/alan1.jpeg" alt="alanto" width="200" class="rounded-circle img-thumbnail">
-        <h1 class="display-4">ramalan</h1>
+        <h1 class="display-4">bunga</h1>
         <p class="lead">Developer | Full Stack</p>
 
         <!-- icon tertaut-->
